--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Home/Manage.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Home/Manage.cshtml
@@ -2,25 +2,28 @@
     ViewBag.Title = "Manage Data";
 }
 
-<div class="jumbotron">
-    <h1>Tumor App - Manage</h1>
-    <p class="lead">Use the links below to manage possible entries</p>
-</div>
+<div class="container">
+    <div class="jumbotron">
+        <h1>Tumor App - Manage</h1>
+        <p class="lead">Use the links below to manage possible entries</p>
+    </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Manage Data</h2>
-        <p>
-            @Html.ActionLink("Possible Health Factors", "Index", "PossibleHealthFactors") <br />
-            @Html.ActionLink("Possible Other Meds", "Index", "PossibleOtherMeds") <br />
-            @Html.ActionLink("Possible Treatments", "Index", "PossibleTreatments") <br />
-            @Html.ActionLink("Possible Symptoms", "Index", "PossibleSymptoms")<br />
-        </p>
+    <div class="row">
+        <div class="col-md-4">
+            <h2>Manage Data</h2>
+
+            <div class="col-lg-6">
+                <p>
+                    @Html.ActionLink("Possible Health Factors", "Index", "PossibleHealthFactors") <br />
+                    @Html.ActionLink("Possible Treatments", "Index", "PossibleTreatments") <br />
+                </p>
+            </div>
+            <div class="col-lg-6">
+                @Html.ActionLink("Possible Other Meds", "Index", "PossibleOtherMeds") <br />
+                @Html.ActionLink("Possible Symptoms", "Index", "PossibleSymptoms")<br />
+
+            </div>
+
+        </div>
     </div>
-    <div class="col-md-4">
-        
     </div>
-    <div class="col-md-4">
-        
-    </div>
-</div>
