--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Home/Manage.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Home/Manage.cshtml
@@ -8,7 +8,7 @@
         <p class="lead">Use the links below to manage possible entries</p>
     </div>
 
-    <div class="row">
+    <div class="row marketing">
         <div class="col-md-4">
             <h2>Manage Data</h2>
 
