--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/CompIndex.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/CompIndex.cshtml
@@ -17,7 +17,7 @@
 
         <h2>Comparison Patients created by All Users</h2>
 
-        using (Html.BeginForm("Index", "Patients", FormMethod.Get,
+        using (Html.BeginForm("CompIndex", "Patients", FormMethod.Get,
                     new { @class = "Search-form" }))
         {
             <div class="row">
