--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Index.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Index.cshtml
@@ -17,76 +17,38 @@
 
         <h2>Patient Directory</h2>
 
+        @Html.ActionLink("Create New", "Create", new { isCompare = false })
         using (Html.BeginForm("Index", "Patients", FormMethod.Get,
                     new { @class = "Search-form" }))
-        {
+            {
             <div class="row">
-                <div class="col-md-5">
+                <div class="col-md-2">
                     <p>
-                        @Html.ActionLink("Create New", "Create", new { isCompare = false })
+                        ID: @Html.TextBox("q")
+                    </p>
+                    <p>
+                        Sex: @Html.TextBox("sex")
+                    </p>
+                    <p>
+                        Classification: @Html.TextBox("clss")
+                    </p>
+                    <p>
+                        Location: @Html.TextBox("tumLoc")                        
+                    </p>
+                    <p>
+                        Grade: @Html.TextBox("grade")
                     </p>
                 </div>
-                <div class="col-md-4">
-                    <div id="txtBox">
-                        @Html.Label("Search for Patients")
-                        <input type="text" name="q" />
-                    </div>
-                </div>
-                <div class="col-md-2">
-                    <div id="radioList">
-                        @Html.RadioButton("SearchType", "0", true)
-                        @Html.Label("ID")
-                        @*@Html.RadioButton("SearchType", "1")
-                            @Html.Label("Age")*@
-                        @*@Html.RadioButton("SearchType", "2", true)
-                            @Html.Label("Sex")*@
-                        @Html.RadioButton("SearchType", "3")
-                        @Html.Label("Classification")
+            </div>
 
-                    </div>
-                </div>
                 <div class="col-md-1">
                     <div id="buttonSearch">
                         <input type="submit" value="Search" id="buttonSubmit" />
                     </div>
                 </div>
 
-            </div>
-
         }
         <br />
-        @*<div id="DivGrid">
-                @{
-                    var grid = new WebGrid(source: Model, canPage: true, rowsPerPage: 4, defaultSort: "ID");
-                    if (Model.Count() > 0)
-                    {
-                        <div><strong> @ViewBag.SearchParameter</strong> | @grid.TotalRowCount @Html.Label("Patients(s) found")</div>
-                        @grid.GetHtml(tableStyle: "PGrid", headerStyle: "Header", alternatingRowStyle: "altRow", htmlAttributes: new { id = "DataTable" }, columns: grid.Columns(
-                    grid.Column("ID"),
-                    grid.Column("Age", "Age"),
-                    grid.Column("Sex", "Sex"),
-                    grid.Column("Histological Classification", "Classification")));
-                    }
-                    else
-                    {
-                        <hr />@Html.Label("No, Patient(s) not found")<hr />
-                    }
-                }
-            </div>*@
-
-
-        @*<div id="DivGrid">
-                @{
-                    var grid = new WebGrid(source: Model, canPage: true, rowsPerPage: 4, defaultSort: "ID");
-                    @grid.GetHtml(tableStyle: "PGrid", headerStyle: "Header", alternatingRowStyle: "altRow", htmlAttributes: new { id = "DataTable" }, columns: grid.Columns(
-                    grid.Column("Patient"),
-                    grid.Column("HistologicalClassification", "Classification"),
-                    grid.Column("TumorLocation", "Location"),
-                    grid.Column("", header: "ToEdit", format: @<text>@Html.ActionLink("Edit", "Edit", "patientID", new { id = item.ID }, new { target = "_blank" })</text>)));
-                }
-
-            </div>*@
-
 
         <div class="table-responsive">
             <table class="table table-striped">
